# fcl-cpp

./: .gitignore  CMakeLists.txt  README.md  env_coll.cpp  env_open3d.cpp  main.cpp  readme.md  self_open3d.cpp  tracik.cpp  tracik2.cpp  vcpkg.json  vcpkg_congiguration.json
include/kdl_parser/: kdl_parser.hpp  visibility_control.hpp
urdf/: PXA-100.urdf
urdf2/: mr_robot.urdf
